<resources>
    <string name="http_data_program_url">http://101.132.134.48/wht/getprogram.php</string>
    <string name="http_data_halobios_url">http://101.132.134.48/wht/gethalobios.php</string>
    <string name="http_data_biology_url">http://101.132.134.48/wht/getbiology.php</string>

    //mapbox令牌
    <string name="mapbox_access_token">pk.eyJ1Ijoid2VucHVwaWwiLCJhIjoiY2s0MTQ4ZjU1MDFoaTNrczNtbzFubWc1NCJ9.JlVWjWBKC0m6D5bxmWEYIg</string>


    <string name="app_name">fishandenvironment</string>
    <string name="activity_main_iv_all">展开tab</string>
    <string name="main_tab_left">左图标</string>
    <string name="main_tab_middle">中间图标</string>
    <string name="main_tab_right">右图标</string>

    <string name="custom_left_img">左边图片</string>

    <string name="fragment_biology_image">动物图片</string>
    <string name="fragment_biology_name">测试文字</string>

    <string name="biology">物种</string>
    <string name="back">返回图片</string>

    <string name="biology_info_name">鱼名字</string>
    <string name="biology_info_namech">鱼的中文名字</string>

    <string name="histogram">直方图</string>

    <string name="fragment_analysis_iv_layer">图层图标</string>
    <string name="fragment_analysis_tv_layer">图层</string>
    <string name="fragment_analysis_iv_point">点形式</string>
    <string name="fragment_analysis_tv_point">点集</string>
    <string name="fragment_analysis_iv_cluster">群集图标</string>
    <string name="fragment_analysis_tv_cluster">群集</string>

    <string name="halobios_info_dialog_name">Shark Test</string>
    <string name="halobios_info_dialog_namech">测试文字</string>
    <string name="halobios_info_dialog_tv_latitude">纬度:</string>
    <string name="halobios_info_dialog_latitude">-23.1</string>
    <string name="halobios_info_dialog_tv_longitude">经度:</string>
    <string name="halobios_info_dialog_longitude">123.11</string>
</resources>
