<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2.5dp"
        android:orientation="vertical"
        android:background="@drawable/analysis_right_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/iv_layer"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/fragment_analysis_iv_layer"
            android:src="@mipmap/layer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:text="@string/fragment_analysis_tv_layer"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2.5dp"
        android:orientation="vertical"
        android:background="@drawable/analysis_right_middle"
        app:layout_constraintTop_toBottomOf="@id/ll_layer"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/iv_point"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/fragment_analysis_iv_point"
            android:src="@mipmap/point"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:text="@string/fragment_analysis_tv_point"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_cluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2.5dp"
        android:orientation="vertical"
        android:background="@drawable/analysis_right_bottom"
        app:layout_constraintTop_toBottomOf="@id/ll_point"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/iv_cluster"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/fragment_analysis_iv_cluster"
            android:src="@mipmap/cluster"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:text="@string/fragment_analysis_tv_cluster"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>