<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_tab"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/main_tab_background">
    <LinearLayout
        android:id="@+id/ll_tab1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_tab1"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/main_tab_left"
            android:src="@mipmap/ditu"/>
        <TextView
            android:id="@+id/tv_tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/main_tab_left"
            android:textColor="@color/main_tab_textColor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_tab2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_tab2"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/main_tab_middle"
            android:src="@mipmap/main_tab_middle"/>
        <TextView
            android:id="@+id/tv_tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/main_tab_middle"
            android:textColor="@color/main_tab_textColor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_tab3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_tab3"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/main_tab_right"
            android:src="@mipmap/main_tab_right"/>
        <TextView
            android:id="@+id/tv_tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/main_tab_right"
            android:textColor="@color/main_tab_textColor"/>
    </LinearLayout>
</LinearLayout>